--- a/style/style.css
+++ b/style/style.css
@@ -522,11 +522,11 @@ ul {
 .main__imagen__compra {
     width: 30rem;
     height: 30rem;
-    margin-right: 1rem;
+    margin: 0 1rem;
 }
 
 .main__informacion__compra {
-    margin-left: 1rem;
+    margin: 0 1rem;
 }
 
 .main__titulo__compra {
