--- a/style/style.css
+++ b/style/style.css
@@ -299,30 +299,6 @@ ul {
     justify-content: center;
 }
 
-.main__boton__estilo {
-    display: flex;
-    font-family: var(--fuenteParrafos);
-    font-size: 1rem;
-    justify-content: center;
-    align-items: center;
-    margin: 2rem;
-    width: 12rem;
-    height: 3rem;
-    font-weight: 700;
-    background-color: var(--primario);
-    color: var(--negro);
-
-    transition-duration: 0.3s;
-}
-
-
-.main__boton__estilo:hover {
-
-    background-color: var(--negro);
-    color: var(--blanco);
-    
-    
-}
 
 /*Main Categorias */
 
@@ -528,6 +504,12 @@ ul {
     background-color: var(--negro);
     padding: 1rem 2rem;
     width: 100% 100%;
+}
+
+.active>.page-link, .page-link.active {
+
+    background-color: var(--primario);
+    border-color: var(--primario);
 }
 
 
