--- a/scss/_mediaq.scss
+++ b/scss/_mediaq.scss
@@ -1,17 +1,17 @@
 @media screen and (max-width: 1630px) {
 
-    /* mq grid area */
+    //  mq grid area 
         .posicionamiento {
             display: block;
         }
     
-    /* mq categorias */
+    // mq categorias 
         .aside {
             display: none;
         
         }
     
-    /* mq productos */
+    // mq productos 
         .main__contenedor__producto {
             margin: 1rem;
         }
@@ -52,7 +52,7 @@
             padding-left: 0;
         }
     
-    /* mq productos */
+    //  mq productos 
         
         .main__contenedor__producto {
             display: grid;
@@ -95,7 +95,7 @@
             width: 100%;
         }
     
-        /*  mq compra */
+        //  mq compra 
     
         .main__posicionamiento__compra {
             flex-direction: column;
@@ -105,7 +105,7 @@
         }
     
     
-    /* mq nosotros */
+    // mq nosotros 
     
         .main__posicionamiento__nosotros {
             flex-direction: column;
@@ -119,7 +119,7 @@
     
     @media screen and (max-width: 768px) {
     
-    /* mq header */
+    // mq header
         
         
     
@@ -146,7 +146,7 @@
     
         }
     
-    /* mq productos */
+    //  mq productos
     
         .col-10 {
             width: 100%;
@@ -167,14 +167,14 @@
             position: none;
         }
     
-     /* mq compra */
+    //  mq compra 
     
     .main__imagen__compra {
         max-width: 100%;
         max-height: 100%;
     }
     
-    /* mq footer */
+    //  mq footer
     
         .footer__posicionamiento {
             flex-direction: column;
@@ -211,7 +211,7 @@
         }
     }
     
-    /* Mq Bootstrap */
+    //  Mq Bootstrap
     
     @media (min-width: 1400px) {
         .container {
