--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,6 @@ body {
   color: #000000;
   line-height: normal; }
 
-h2 {
-  font-family: "PT Sans", sans-serif; }
-
 h3 {
   font-size: 1rem; }
 
@@ -51,11 +48,28 @@ ul {
 .no-margin {
   margin: 0rem; }
 
+.boton, .boton-primario, .boton-secundario {
+  background-color: #000000;
+  color: #ffffff;
+  font-family: "PT Sans", sans-serif;
+  cursor: pointer; }
+
+.boton-primario {
+  padding: 0.6rem;
+  margin-top: 1rem;
+  width: 10rem; }
+
+.boton-secundario {
+  margin-left: -0.5rem;
+  height: 3rem;
+  width: 5rem;
+  border: 0; }
+
 .header__barra {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1rem 6rem 1rem 6rem; }
+  margin: 1rem 6rem; }
 
 .header__logo {
   font-family: "PT Sans", sans-serif;
@@ -77,17 +91,6 @@ ul {
   margin: 0rem;
   padding: 0rem; }
 
-.header__form__input {
-  background-color: #000000;
-  color: #ffffff;
-  font-family: "PT Sans", sans-serif;
-  margin-left: -0.5rem;
-  height: 3rem;
-  width: 5rem;
-  border: 0;
-  cursor: pointer; }
-
-/*Barra inferior*/
 .header__barra__navegacion {
   background-color: #254596;
   padding-left: 2rem; }
@@ -127,6 +130,7 @@ ul {
   margin: 0; }
 
 .header__banner__subtitulo {
+  font-family: "PT Sans", sans-serif;
   padding-top: 2rem;
   text-align: center; }
 
@@ -226,22 +230,13 @@ ul {
 
 .form__textarea {
   height: 12rem;
-  border: #000000 0.1px solid;
   width: 85%;
+  border: #000000 0.1px solid;
   margin: 0.2rem; }
 
 .form__boton {
   display: flex;
   justify-content: flex-end; }
-
-.boton {
-  background-color: #000000;
-  color: #ffffff;
-  padding: 0.6rem;
-  margin-top: 1rem;
-  font-family: "PT Sans", sans-serif;
-  width: 10rem;
-  cursor: pointer; }
 
 .header {
   grid-area: header; }
@@ -261,9 +256,9 @@ ul {
   margin: 0 auto; }
 
 .main__contenedor__producto {
-  background-color: #ffffff;
-  width: 12rem;
   height: 16rem;
+  width: 12rem;
+  background-color: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 1rem 2rem;
   transition-duration: 0.5s; }
@@ -273,10 +268,10 @@ ul {
   position: static; }
 
 .main__productos {
+  height: 9rem;
+  width: 9rem;
   display: block;
   margin: 0 auto;
-  width: 9rem;
-  height: 9rem;
   padding: 0.5rem 0.5rem 0 0.5rem; }
 
 .main__productos__texto {
@@ -292,7 +287,6 @@ ul {
   color: #000000;
   border-radius: 0; }
 
-/*Main Categorias */
 .main__contenedor__categorias {
   display: flex;
   flex-direction: column;
@@ -306,10 +300,10 @@ ul {
   margin: 0.1rem; }
 
 .categoria {
-  display: flex;
-  margin: 0 auto;
+  height: 7rem;
   width: 7rem;
-  height: 7rem; }
+  display: flex;
+  margin: 0 auto; }
 
 .main__contenedor__categorias .categoria__a span:first-child {
   display: block;
@@ -397,8 +391,8 @@ ul {
   padding: 1rem; }
 
 .productos__barra__a {
-  width: 15rem;
   height: 15rem;
+  width: 15rem;
   transition-duration: 0.3s; }
 
 .productos__barra__a:hover {
@@ -412,8 +406,8 @@ ul {
   border-color: #254596; }
 
 .main__local__imagen {
-  width: 34rem;
-  height: 24rem; }
+  height: 34rem;
+  width: 24rem; }
 
 .main__posicionamiento__nosotros {
   display: flex;
@@ -433,18 +427,18 @@ ul {
   width: 70%; }
 
 .main__contacto__imagen {
+  height: 100%;
+  width: 100%;
   display: flex;
   margin: auto;
   background-image: url(../public/contacto.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: start end;
-  width: 100%;
-  height: 100%; }
+  background-position: start end; }
 
 .main__form__contacto {
-  width: 70%;
   height: 70%;
+  width: 70%;
   background-color: #ffffff;
   margin: 10% auto;
   padding: 2rem; }
@@ -455,8 +449,8 @@ ul {
   margin: 4rem 0; }
 
 .main__imagen__compra {
-  width: 30rem;
   height: 30rem;
+  width: 30rem;
   margin: 0 1rem; }
 
 .main__informacion__compra {
@@ -485,13 +479,10 @@ ul {
   width: 2.5rem; }
 
 @media screen and (max-width: 1630px) {
-  /* mq grid area */
   .posicionamiento {
     display: block; }
-  /* mq categorias */
   .aside {
     display: none; }
-  /* mq productos */
   .main__contenedor__producto {
     margin: 1rem; }
   .main__productos__grid {
@@ -513,14 +504,13 @@ ul {
     display: none; }
   .header__barra__navegacion {
     padding-left: 0; }
-  /* mq productos */
   .main__contenedor__producto {
+    height: 25rem;
+    width: 12rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     text-align: start;
-    width: 25rem;
-    height: 12rem;
     margin: 1rem; }
   .main__productos__texto {
     text-align: start;
@@ -538,21 +528,18 @@ ul {
     justify-content: center; }
   .main__barra {
     width: 100%; }
-  /*  mq compra */
   .main__posicionamiento__compra {
     flex-direction: column;
     align-items: center;
     width: 85%;
     margin: 2rem auto; }
-  /* mq nosotros */
   .main__posicionamiento__nosotros {
     flex-direction: column; }
   .main__local__imagen {
-    width: 100%;
-    height: 100%; } }
+    height: 100%;
+    width: 100%; } }
 
 @media screen and (max-width: 768px) {
-  /* mq header */
   .header__barra__lista {
     display: flex;
     flex-direction: column;
@@ -564,7 +551,6 @@ ul {
     color: var(--negro); }
   .header__banner__texto {
     font-size: 3rem; }
-  /* mq productos */
   .col-10 {
     width: 100%; }
   .main__contenedor__titulo {
@@ -574,11 +560,9 @@ ul {
   .main__contenedor__producto:hover {
     transform: none;
     position: none; }
-  /* mq compra */
   .main__imagen__compra {
     max-width: 100%;
     max-height: 100%; }
-  /* mq footer */
   .footer__posicionamiento {
     flex-direction: column;
     align-items: center; }
@@ -596,7 +580,6 @@ ul {
   .form__textarea {
     width: 100%; } }
 
-/* Mq Bootstrap */
 @media (min-width: 1400px) {
   .container {
     max-width: 100vw; } }
