--- a/scss/_compra.scss
+++ b/scss/_compra.scss
@@ -1,38 +1,37 @@
 .main__posicionamiento__compra {
     display: flex;
     justify-content: center;
-    margin: 4rem 0;
+    margin: $spacing*4 0;
 }
 
 .main__imagen__compra {
-    width: 30rem;
-    height: 30rem;
-    margin: 0 1rem;
+    @include size (30rem, 30rem);
+    margin: 0 $spacing;
 }
 
 .main__informacion__compra {
-    margin: 0 1rem;
+    margin: 0 $spacing;
 }
 
 .main__titulo__compra {
-    margin-bottom: 2rem;
+    margin-bottom: $spacing*2;
 }
 
 .main__texto__compra {
     font-family: $fuenteParrafos;
     font-weight: 700;
     font-size: 1.2rem;
-    margin-bottom: 1rem;
+    margin-bottom: $spacing;
 }
 
 .main__precio__compra {
     font-size: 1rem;
-    margin: 1rem;
+    margin: $spacing;
 }
 
 .main__adicional__compra {
     color: forestgreen;
-    margin-bottom: 0.5rem;
+    margin-bottom: $spacing/2;
 }
 
 .main__cantidad__compra {
