--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -6,21 +6,20 @@
 
 
 .main__contacto__imagen {
+    @include size (100%, 100%);
     display: flex;
     margin: auto;
     background-image: url(../public/contacto.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: start end;
-    width: 100%;
-    height: 100%;
 }
 
 .main__form__contacto {
-    width: 70%;
-    height: 70%;
+    @include size (70%, 70%);
+
     background-color: $blanco;
     margin: 10% auto;
-    padding: 2rem;
+    padding: $spacing*2;
     
 }
