--- a/scss/_mediaq.scss
+++ b/scss/_mediaq.scss
@@ -13,7 +13,7 @@
     
     // mq productos 
         .main__contenedor__producto {
-            margin: 1rem;
+            margin: $spacing;
         }
     
         .main__productos__grid {
@@ -24,7 +24,7 @@
         }
         
         .main__productos__grid a {
-            margin: 1rem;
+            margin: $spacing;
         }
     
         .main__barra {
@@ -55,13 +55,12 @@
     //  mq productos 
         
         .main__contenedor__producto {
+            @include size (25rem, 12rem);
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             align-items: center;
             text-align: start;
-            width: 25rem;
-            height: 12rem;
-            margin: 1rem;
+            margin: $spacing;
             
         }
     
@@ -73,7 +72,7 @@
     
         .main__productos__texto h4 {
             margin: 0;
-            margin-bottom: 0.5rem;
+            margin-bottom: $spacing/2;
             
         }
     
@@ -112,8 +111,7 @@
         }
     
         .main__local__imagen {
-            width: 100%;
-            height: 100%;
+            @include size (100%, 100%);
         }
     } 
     
