--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,9 +2,7 @@ $fuenteHeading: 'PT Sans', sans-serif;
 $fuenteParrafos: 'Open Sans', sans-serif;
 $fuenteFirma: 'The Nautigal', cursive;
 $blanco: #ffffff;
+$grisoscuro: #5c5c5c;
 $negro: #000000;
 $primario: #254596;
 $spacing: 1rem;
-
-
-
