--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,15 @@ ul {
   width: 5rem;
   border: 0; }
 
+.text-h1 {
+  color: #254596; }
+
+.text-footer {
+  color: #ffffff; }
+
+.text-categorias {
+  color: #5c5c5c; }
+
 .header__barra {
   display: flex;
   justify-content: space-between;
@@ -123,7 +132,6 @@ ul {
 .header__banner__texto {
   font-family: "PT Sans", sans-serif;
   text-align: center;
-  color: #254596;
   background-color: rgba(0, 0, 0, 0.5);
   font-size: 6rem;
   padding: 0 1rem;
@@ -173,14 +181,12 @@ ul {
   margin: 2rem; }
 
 .footer__seccion__titulo {
-  color: #ffffff;
   margin: 1rem; }
 
 .footer__a {
   display: flex;
   flex-direction: column;
   margin-bottom: 0.5rem;
-  color: #ffffff;
   font-size: 0.7rem; }
 
 .footer__seccion__titulo__newsletter {
@@ -318,7 +324,6 @@ ul {
   position: absolute;
   font-size: 1.5rem;
   font-family: "PT Sans", sans-serif;
-  color: #254596;
   font-weight: 700;
   top: 0;
   right: 0;
