--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -10,6 +10,11 @@
     width: 60%;
 }
 
+.main__nosotros__texto {
+    font-weight: 700;
+    line-height: 1.5;
+}
+
 .firma {
     font-family: $fuenteFirma;
     font-size: 3rem;
