--- a/scss/_compra.scss
+++ b/scss/_compra.scss
@@ -14,7 +14,9 @@
 }
 
 .main__titulo__compra {
+    display: flex;
     margin-bottom: $spacing*2;
+    border-bottom: 2px solid $primario;
 }
 
 .main__texto__compra {
@@ -40,4 +42,33 @@
     width: 2.5rem;
 
     
+}
+.main__section__tabla__compra {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main__tabla__titulo__compra {
+    margin: $spacing*2;
+    padding: $spacing/2;
+    border-bottom: 3px solid $primario;
+}
+
+
+.main__tabla__compra {
+    border: 1px solid $grisoscuro;  
+    width: 70%;
+}
+
+.main_tabla_th_compra {
+    border-right: 1px solid $grisoscuro;
+    border-bottom: 1px solid $grisoscuro;
+    padding: $spacing/2;
+    width: 30%;
+}
+
+.main_tabla_td_compra {
+    border-bottom: 1px solid $grisoscuro; 
+    padding: $spacing/2;
+    width: 70%;
 }
