--- a/scss/_mediaq.scss
+++ b/scss/_mediaq.scss
@@ -55,7 +55,7 @@
     //  mq productos 
         
         .main__contenedor__producto {
-            @include size (25rem, 12rem);
+            @include size (12rem, 25rem);
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             align-items: center;
@@ -102,8 +102,26 @@
             width: 85%;
             margin: 2rem auto;
         }
+
+        .aos-animate {
+            opacity: 1;
+            transform: translateZ(0);
+
+        }
     
-    
+        [data-aos^='fade'][data-aos^='fade'] {
+            opacity: 1;
+            transition-property: none;
+        }
+
+        [data-aos='fade-right'] {
+            transform: none;
+          }
+
+        [data-aos='fade-left'] {
+            transform: none;
+          }
+
     // mq nosotros 
     
         .main__posicionamiento__nosotros {
@@ -169,9 +187,16 @@
     
     .main__imagen__compra {
         max-width: 100%;
-        max-height: 100%;
+        height: 100%;
     }
-    
+
+    .main__tabla__compra {
+        width: 95%;
+    }
+
+
+
+
     //  mq footer
     
         .footer__posicionamiento {
